# Ferrite

./: .gitignore  Cargo.toml  Dockerfile  README.md  Student_Performance.csv
src/: lib.rs  main.rs
src/csv_io/: mod.rs
src/data_utils/: csv_io.rs  mod.rs  train_test_split.rs
src/helpers/: norm.rs
src/linear_regression/: alg.rs  error_fn.rs  gradient.rs  input.rs  mod.rs  output.rs  weight.rs
src/matrix_operations/: mat_mul.rs  mod.rs
src/multivariate_regression/: cost_fn.rs  input.rs  mod.rs  normalization.rs  regularization.rs
src/multivariate_regression/cost_fn/: cost_fn.rs  mod.rs
src/multivariate_regression/gradient/: gradient_type.rs  mod.rs
src/multivariate_regression/input/: input.rs
src/multivariate_regression/regularization/: mod.rs
src/multivariate_regression/training/: mod.rs  train.rs  train_config.rs
src/multivariate_regression/update_weight/: mod.rs
src/multivariate_regression/weight/: weight.rs
